feature(DB): user view specific property from database - add end point /api/v2/property/:id for viewing specific property from database - add fixes for old tests to fails gracefully while we are not yet update to v2 - add refactoring everywhere we have v1 -> v2 [finishes #167330969]
